fix button z-index to be pressable when in header

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ header {
   border-radius: 50%;
   border: 2px solid transparent;
   cursor: pointer;
+  z-index: 999999;
 }
 
 .header #mode:hover {
